Add changed button text

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,6 @@
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-      <button ion-button (click)="onGoToAppareils()" routerLink="/appareils" >Appareils</button>
-  </div>
+  <p>{{text}}</p>
+  <ion-button (click)="onChangeText()">Change text</ion-button>
 </ion-content>
