--- a/src/app/recipes/recipe-detail/recipe-detail.page.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.page.html
@@ -1,6 +1,13 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/recipes" [text]="buttonText">
+      </ion-back-button>
+    </ion-buttons>
     <ion-title>{{ loadedRecipe.title }}</ion-title>
+    <ion-buttons slot="primary" (click)="onDeleteRecipe()">
+      <ion-button><ion-icon name="trash" slot="icon-only"></ion-icon></ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
